cmake_minimum_required(VERSION 3.17)
project(COM_S_327 C )
SET(GCC_COVERAGE_COMPILE_FLAGS "-lncurses")
SET(GCC_COVERAGE_LINK_FLAGS    "-lncurses")
set(CMAKE_C_STANDARD 11)
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FILES}")
SET(CMAKE_EXE_LINKER_FLAGS "-lncurses")
SET(CMAKE_SHARED_LINKER_FLAGS "-lncurses")
SET(CMAKE_EXE_LINKER_FLAGS_INIT "-lncurses")
find_package(Curses REQUIRED)
include_directories(${CURSES_INCLUDE_DIR})
add_executable(COM_S_327 rlg327.c heap.c character.c event.c dungeon.c move.c npc.c pc.c path.c utils.c)
target_link_libraries(COM_S_327 ${CURSES_LIBRARIES})
